<resources>
    <string name="app_name">Phone Detector</string>
    <string name="menu_option_is_show_spam">Show spam</string>
    <string name="menu_option_is_not_show_spam">Show not spam</string>
    <string name="menu_option_setting">Settings</string>
    <string name="info_user_not_found">Undefined User</string>
    <string name="button_block_number">Block number</string>
    <string name="button_add_contact">Add contact</string>
    <string name="title_activity_settings">Settings</string>

    <string name="messages_header">Main Activity</string>
    <string name="activate_phone_detection">Enable phone detection</string>
    <string name="activate_phone_detection_description">Read Call Log permission required for app work</string>

    <string name="search_in_contacts">Disable search in contacts</string>
    <string name="search_in_contacts_description">Don\'t show overlay of known contact. Read Contacts permission required for app work</string>
    <string name="detection_delay">Detection timeout</string>
    <string name="detection_delay_description">Set maximum recognition timeout for incoming call (in seconds)</string>
    <string name="notification_header">Notification Activity</string>
    <string name="create_notification_description">Send notification after setted timeout about information last call</string>
    <string name="create_notification">Delayed notification</string>
    <string name="time_notification_description">Set the time (in min) after which a reminder notification will arrive (0 is after call) </string>
    <string name="time_notification">Time of delay</string>
    <string name="drop_table_description">Delete all log information</string>
    <string name="drop_table">Clean phones info</string>
    <string name="always_network_description">Use only network information about incoming phone and ignore cached log</string>
    <string name="always_network">Use always network</string>
    <string name="show_empty_user_description">Show information popup when incoming number is not detected</string>
    <string name="show_empty_user">Show empty phone popup</string>
    <string name="notification_instead_overlay_description">Show notification with detected number when ringing</string>
    <string name="notification_instead_overlay">Notification when ringing</string>
    <string name="no_cache_empty_phones_description">Don\'t save in database empty phones</string>
    <string name="no_cache_empty_phones">No cache empty phones</string>

</resources>
