<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.leti.phonedetector.MainActivity">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/item_menu_option_is_show_spam"
            android:title="@string/menu_option_is_show_spam"
            android:checkable="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/item_menu_option_is_not_show_spam"
            android:title="@string/menu_option_is_not_show_spam"
            android:checkable="true"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/item_menu_option_setting"
        android:title="@string/menu_option_setting"
        app:showAsAction="never" />
</menu>
